--- a/image/dockerfile
+++ b/image/dockerfile
@@ -1,1 +1,9 @@
 FROM node:latest
+
+run npm install smtp-server
+run npm install mailparser
+run npm install nodemailer
+
+mkdir /var/node
+
+run git RUN git clone https://github.com/ady624/hikvision-nvr /var/node
