--- a/.github/CICD.yml
+++ b/.github/CICD.yml
@@ -19,4 +19,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Build image
         cmd: |
-          docker build 
+          docker build .
