--- a/.github/workflow/CICD.yml
+++ b/.github/workflow/CICD.yml
@@ -4,12 +4,9 @@ on:
     branches:
       - main
 
-permissions:
-  id-token: write
-
 jobs:
   deploy_source:
-    name: build and deploy lambda
+    name: build, push and deploy image
     strategy:
       matrix:
         node-version: [12.x]
