--- a/.github/workflow/CICD.yml
+++ b/.github/workflow/CICD.yml
@@ -1,4 +1,4 @@
-name: deploy to lambda
+name: build, push and deploy image
 on: 
   push:
     branches:
@@ -14,6 +14,6 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
-      - name: Build image
-        cmd: |
-          docker build .
+      # - name: Build image
+      #   cmd: |
+      #     docker build .
