--- a/.github/workflow/CICD.yml
+++ b/.github/workflow/CICD.yml
@@ -16,4 +16,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Build image
         cmd: |
-          docker build .
+          docker build image/
