--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
-      # - name: Build image
-      #   cmd: |
-      #     docker build .
+      - name: Build image
+        cmd: |
+          docker build .
