--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -15,5 +15,5 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
       - name: Build image
-        cmd: |
+        run: |
           docker build .
